# FirstRepo

./: README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  auth.py  config.py  main.py  models.py
dashboards/: app.py
docs/: api.md
pipelines/: etl_flow.py
tests/: test_api.py
worker/: celery_app.py
